--- a/css/port.css
+++ b/css/port.css
@@ -3,7 +3,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	background-color: #c0b283;
-	font-family: Relaway;	
+	font-family: 'Noto Serif', serif;	 
 }
 
 img {
