--- a/css/port.css
+++ b/css/port.css
@@ -2,7 +2,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	background-color: #c0b283;
+	background-color: #a1927b;
 	font-family: 'Noto Serif', serif;	 
 }
 
@@ -146,7 +146,6 @@ a:hover {
 }
 
 #myPicture {
-/*	max-width: 210px;*/
 	width: 12rem;
 	height: auto;
 	border-radius: 4em;
